--- a/src/pages/ajout/ajout.scss
+++ b/src/pages/ajout/ajout.scss
@@ -1,8 +1,11 @@
 page-ajout {
   .pizzatheme{
-    background-image: url('../assets/imgs/ajout.png');
+    background-image: url('../assets/imgs/pizza-back.png');
       background-size: 100% 100%;
       background-repeat: no-repeat;
       flex: 1;
+    }
+    .width{
+      height: 100%;
     }
 }
