--- a/src/pages/ajout/ajout.scss
+++ b/src/pages/ajout/ajout.scss
@@ -1,11 +1,12 @@
 page-ajout {
   .pizzatheme{
     background-image: url('../assets/imgs/pizza-back.png');
-      background-size: 100% 100%;
-      background-repeat: no-repeat;
-      flex: 1;
-    }
-    .width{
-      height: 100%;
-    }
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    flex: 1;
+  }
+  input[type="text"] {
+    width: 100%;
+    display: table;
+  }
 }
