bug derniere minute

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,9 +5,9 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-content>
+  <ion-content class="pizzatheme">
     <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)" class="button-style">
         {{p.title}}
       </button>
     </ion-list>
