--- a/src/pages/modification/modification.scss
+++ b/src/pages/modification/modification.scss
@@ -1,8 +1,26 @@
+// @Author: VELLA CYRIL <nonym0usse>
+// @Date:   2018-02-14T11:53:40+01:00
+// @Email:  contact@vella.fr
+// @Last modified by:   nonym0usse
+// @Last modified time: 2018-02-26T16:55:50+01:00
+
+
+
 page-modification {
   .pizzatheme{
-    background-image: url('../assets/imgs/transfile.png');
+    background-image: url('../assets/imgs/pizza-back.png');
       background-size: 100% 100%;
       background-repeat: no-repeat;
       flex: 1;
     }
+    #rounded {
+      width: 100%;
+      height: 50px;
+      -moz-border-radius: 50px;
+      -webkit-border-radius: 50px;
+      border-radius: 10px;
+      margin-bottom: 10px;
+      background-color: rgba(255, 255, 255, 0);
+      color: #FFF;
+  }
 }
